--- a/emaillist01/pom.xml
+++ b/emaillist01/pom.xml
@@ -24,5 +24,13 @@
 			    <version>3.3.2</version>
 			</plugin>
 		</plugins>
-	</build>	
+	</build>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+	</dependencies>
 </project>
