--- a/guestbook01/pom.xml
+++ b/guestbook01/pom.xml
@@ -45,6 +45,18 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+					<url>http://192.168.10.43:8080/manager/text</url>
+					<path>/guestbook01</path>
+					<username>admin</username>
+					<password>hodoo1020</password>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
