--- a/jstlel/pom.xml
+++ b/jstlel/pom.xml
@@ -50,5 +50,11 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- JSTL-->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 </project>
